# js-bindgen

./: .gitattributes  .gitignore  .prettierignore  .prettierrc.toml  ARCHITECTURE.md  LICENSE-MIT  README.md  TEST.md  TODO.md  cached-archives.md  tombi.toml
client/: Cargo.toml  build_wabii.sh
client/.cargo/: audit.toml  config.toml
client/bootstrap/src/: lib.rs
client/cov/: Cargo.toml
client/cov/src/: lib.rs
client/e2e/: Cargo.toml
client/e2e/examples/: primitive.rs  string.rs
client/examples/: basic.html  basic.mjs  basic.rs  basic.wat
client/js-bindgen/: Cargo.toml
client/js-bindgen-test/: Cargo.toml
client/js-bindgen-test/src/: lib.rs
client/js-bindgen/src/: bootstrap.rs  cache.rs  lib.rs  macro.rs  test.rs
client/js-bindgen/src/test/: mod.rs
client/js-bindgen/tests/ui/: import.rs  string_arguments.rs
client/js-sys/: Cargo.toml  build.rs  externref_32.wasm  externref_32.wat  externref_64.wasm  externref_64.wat
client/js-sys-macro/src/: lib.rs
client/js-sys-macro/src/test/: mod.rs
client/js-sys/benches/: conv.rs  interop.rs
client/js-sys/src/: array.rs  exception.rs  externref.rs  hazard.rs  lib.rs  macro.rs  numeric.rs  panic.rs  string.rs  util.rs  value.rs
client/js-sys/src/array/: array.gen.rs  array.js-sys.rs  gen.js-sys.rs  gen.rs  mod.rs
client/js-sys/src/bigint/: bigint.gen.rs  bigint.js-sys.rs  mod.rs
client/js-sys/src/interop/: mod.rs  primitive.rs  string.rs
client/js-sys/src/macro/: abi.rs  export.rs  js_import.rs  result.rs  text.rs  wat.rs  wat_import.rs
client/js-sys/src/number/: gen.js-sys.rs  mod.rs  number.gen.rs
client/js-sys/src/string/: gen.js-sys.rs  gen.rs  mod.rs  rust.rs  string.gen.rs  string.js-sys.rs
client/js-sys/src/value/: gen.js-sys.rs  gen.rs  mod.rs  value.gen.rs
client/js-sys/tests/: array.rs  hazard.rs  interop.rs  numeric.rs  optional.rs  string.rs  value.rs
client/shared/src/: lib.rs
client/test/: Cargo.toml
client/test/src/: lib.rs
client/test/src/criterion/: analysis.rs  baseline.rs  bencher.rs  benchmark.rs  compare.rs  estimate.rs  format.rs  measurement.rs  mod.rs  report.rs  routine.rs
client/test/src/time/: instant.rs  mod.rs  system_time.rs
client/wabii/: Cargo.toml  random.64.ron  random.ron  stdio.64.ron  stdio.ron  time.ron  update.sh
client/wabii/src/: lib.rs  random.64.wat  random.rs  random.wat  stdio.64.wat  stdio.rs  stdio.wat  time.rs  time.wat
client/wcov/: Cargo.toml  build.rs
client/wcov/src/: lib.rs
client/web-sys/: Cargo.toml  build.rs
client/web-sys/src/: console.gen.rs  console.js-sys.rs  console.rs  lib.rs
dev/: Cargo.toml
dev/src/: build.rs  command.rs  features.rs  github.rs  host.rs  main.rs  permutation.rs  test.rs
dev/src/client/: build.rs  metadata.rs  mod.rs  process.rs  test.rs  util.rs
dev/src/host/: check.rs  metadata.rs  mod.rs  test.rs
env/: Cargo.toml
env/.cargo/: config.toml
env/examples/: random.rs
env/playground/: Cargo.toml
env/playground/src/: lib.rs
host/: Cargo.toml  eslint.config.base.mts  tsconfig.base.json
host/.cargo/: audit.toml  config.toml
host/cargo-js-sys/: Cargo.toml
host/cargo-js-sys/src/: js_sys.rs  main.rs
host/cargo-shim/: Cargo.toml  README.md  linker  runner
host/cargo-shim/src/: lib.rs
host/cli/: Cargo.toml
host/cli-lib/: Cargo.toml  build.rs
host/cli-lib/src/: lib.rs
host/cli-lib/src/js/: imports.d.mts  imports.mjs  imports.mts  tsconfig.json
host/cli/src/: main.rs
host/dev/: Cargo.toml
host/dev/src/: check.rs  codegen.rs  command.rs  main.rs  util.rs
host/dev/src/client/: check.rs  e2e.rs  fmt.rs  metadata.rs  mod.rs  permutation.rs  test.rs  util.rs
host/dev/src/host/: audit.rs  build.rs  check.rs  fmt.rs  metadata.rs  mod.rs  test.rs
host/inline-snap/: Cargo.toml
host/inline-snap-macro/: Cargo.toml
host/inline-snap-macro/src/: lib.rs
host/inline-snap/src/: lib.rs
host/js-bindgen/: Cargo.toml
host/js-bindgen-runner/: Cargo.toml
host/js-bindgen-runner/js/: browser-runner.mjs  console-hook.mjs  index.html  node-runner.mjs  playwright-runner.mjs  runner-core.mjs  service-worker.mjs  shared.mjs  worker-runner.mjs
host/js-bindgen-runner/src/: driver.rs  main.rs  server.rs  util.rs  web_driver.rs
host/js-bindgen-runner/src/js/: browser-runner.mjs  browser-spawner.mjs  browser.mjs  deno.json  (+15 more)
host/js-bindgen-test-macro/: Cargo.toml
host/js-bindgen-test-macro/src/: lib.rs
host/js-bindgen-test-runner/: Cargo.toml
host/js-bindgen-test-runner/js/: browser-runner.mjs  console-hook.mjs  index.html  node-runner.mjs  playwright-runner.mjs  runner-core.mjs  service-worker.mjs  shared.mjs  worker-runner.mjs
host/js-bindgen-test-runner/src/: main.rs
host/js-bindgen/src/: lib.rs  shared  util.rs
host/js-bindgen/tests/: ui.rs
host/js-sys-bindgen/: Cargo.toml
host/js-sys-bindgen/benches/: codegen.rs
host/js-sys-bindgen/src/: export.rs  file.rs  function.rs  hygiene.rs  lib.rs  macro.rs  type.rs  web_idl.rs
host/js-sys-gen/: Cargo.toml
host/js-sys-gen/src/: function.rs  hygiene.rs  lib.rs  macro.rs  type.rs  web_idl.rs
host/js-sys-macro/: Cargo.toml
host/js-sys-macro/src/: lib.rs  test.rs
host/ld/: Cargo.toml  build.rs
host/ld-lib/: Cargo.toml
host/ld-lib/src/: lib.rs
host/ld-shared/: Cargo.toml
host/ld-shared/src/: lib.rs
host/ld/src/: args.rs  js.rs  ld_args.rs  main.rs  post.rs  pre.rs  wasm_ld.rs
host/linker/: Cargo.toml
host/linker/src/: lld-opt.rs  lld.rs  main.rs
host/lld-opt/: Cargo.toml
host/lld-opt/src/: main.rs
host/macro/: Cargo.toml
host/macro-shared/: Cargo.toml
host/macro-shared/src/: lib.rs
host/macro/src/: custom_section.rs  lib.rs  util.rs
host/macro/tests/: ui.rs
host/runner/: Cargo.toml  build.rs
host/runner/src/: binary.rs  config.rs  main.rs  run_data.rs  runner.rs  server.rs  test.rs  web_driver.rs
host/shared/: Cargo.toml
host/shared/src/: lib.rs  memmap.rs  web_driver.rs
host/test-macro/: Cargo.toml
host/test-macro/src/: lib.rs
host/wasm-ld-opt/: Cargo.toml
host/wasm-ld-opt/src/: main.rs
host/web-driver/: Cargo.toml
host/web-driver/src/: main.rs  web_driver.rs
(+216 files in other folders)
