[workspace]
members = ["js-bindgen-test", "js-sys", "web-sys"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
js-bindgen = { path = "../host/js-bindgen" }
js-bindgen-test = { path = "js-bindgen-test" }
js-bindgen-test-macro = { path = "../host/js-bindgen-test-macro" }
js-sys = { path = "js-sys" }
js-sys-macro = { path = "../host/js-sys-macro" }
mini-alloc = "1"
web-sys = { path = "web-sys" }

[package]
edition = { workspace = true }
license = { workspace = true }
name = "examples"
publish = false

[dev-dependencies]
mini-alloc = { workspace = true }
web-sys = { workspace = true }

[[example]]
crate-type = ["cdylib"]
name = "basic"

[workspace.lints.rust]
linker_messages = "warn"

[workspace.lints.clippy]
obfuscated_if_else = "allow"
tabs_in_doc_comments = "allow"
undocumented_unsafe_blocks = "warn"
use_self = "warn"

[lints]
workspace = true

[patch.crates-io]
# Wasm64 support: https://github.com/oli-obk/ui_test/issues/361.
mini-alloc = { git = "https://github.com/daxpedda/mini-alloc", branch = "wasm64" }
