[workspace]
members = ["js-sys", "test", "web-sys"]
resolver = "2"

[workspace.package]
edition = "2024"
include = ["/LICENSE-APACHE", "/LICENSE-MIT", "/Cargo.toml", "/src/**/*.rs"]
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
js-bindgen = { path = "../host/js-bindgen" }
js-bindgen-test = { path = "test" }
js-bindgen-test-macro = { path = "../host/test-macro" }
js-sys = { path = "js-sys" }
js-sys-macro = { path = "../host/js-sys-macro" }
mini-alloc = "1"
web-sys = { path = "web-sys" }

[package]
edition = { workspace = true }
license = { workspace = true }
name = "examples"
publish = false

[dev-dependencies]
mini-alloc = { workspace = true }
web-sys = { workspace = true }

[[example]]
crate-type = ["cdylib"]
name = "basic"

[workspace.lints.rust]
linker_messages = "warn"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_deref_methods = "allow"
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
tabs_in_doc_comments = "allow"
undocumented_unsafe_blocks = "warn"
use_self = "warn"
wildcard_imports = "allow"
# TODO: remove
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"

[lints]
workspace = true

[patch.crates-io]
# Wasm64 support: https://github.com/oli-obk/ui_test/issues/361.
mini-alloc = { git = "https://github.com/daxpedda/mini-alloc", branch = "wasm64" }
