[package]
name = "placeholder"
edition = { workspace = true }
license = { workspace = true }
publish = false

[workspace]
resolver = "3"
members = ["js-bindgen", "js-sys", "test", "web-sys"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
include = [
	"!/src/**/*.js-sys.rs",
	"!/src/**/tests/**",
	"/Cargo.toml",
	"/LICENSE-APACHE",
	"/LICENSE-MIT",
	"/src/**/*.rs",
]

[workspace.dependencies]
js-bindgen = { path = "js-bindgen" }
js-bindgen-macro = { path = "../host/macro" }
js-bindgen-test = { path = "test" }
js-bindgen-test-macro = { path = "../host/test-macro" }
js-sys = { path = "js-sys" }
js-sys-macro = { path = "../host/js-sys-macro" }
mini-alloc = "1"
paste = "1"
web-sys = { path = "web-sys" }

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_deref_methods = "allow"
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
tabs_in_doc_comments = "allow"
undocumented_unsafe_blocks = "warn"
use_self = "warn"
wildcard_imports = "allow"

# TODO: remove
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"

[workspace.lints.rust]
linker_messages = "warn"
unexpected_cfgs = { level = "allow", check-cfg = [
	'cfg(js_sys_target_feature, values("sab", "unstable-rab"))',
	'cfg(js_sys_assume_endianness, values("big", "little"))',
] }

[workspace.metadata.spellcheck]
config = "../.config/spellcheck.toml"

[[example]]
crate-type = ["cdylib"]
name = "basic"

[dev-dependencies]
mini-alloc = { workspace = true }
web-sys = { workspace = true }

[lints]
workspace = true

[patch.crates-io]
# Wasm64 support: https://github.com/oli-obk/ui_test/issues/361.
mini-alloc = { git = "https://github.com/daxpedda/mini-alloc", branch = "wasm64" }
