[package]
edition = "2024"
license = "MIT OR Apache-2.0"
name = "dev"
publish = false

[dependencies]
anstyle = { version = "1", default-features = false }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
strum = { version = "0.28", default-features = false, features = ["derive"] }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_Threading"] }

[lints.rust]
linker_messages = "warn"
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_deref_methods = "allow"
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
tabs_in_doc_comments = "allow"
undocumented_unsafe_blocks = "warn"
use_self = "warn"
wildcard_imports = "allow"
# TODO: remove
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
