[workspace]
members = [
	"js-bindgen",
	"js-sys-macro",
	"js-bindgen-test-macro",
	"js-bindgen-runner",
	"ld",
	"ld-shared",
	"macro-shared",
	"shared",
	"wasm-ld-opt",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["tokio", "json", "http1", "http2"] }
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive"] }
fantoccini = { version = "0.22.0", default-features = false, features = ["rustls-tls"] }
hashbrown = "0.16"
indoc = "2"
itertools = { version = "0.14", default-features = false }
js-bindgen-ld-shared = { path = "ld-shared" }
js-bindgen-macro-shared = { path = "macro-shared" }
js-bindgen-shared = { path = "shared" }
memmap2 = "0.9"
object = { version = "0.38", default-features = false, features = ["archive", "read_core", "std"] }
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
shlex = { version = "1.3.0", default-features = false }
similar-asserts = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing", "printing"] }
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread"] }
ui_test = { version = "0.30", default-features = false, features = ["rustc"] }
url = { version = "2.5.8", default-features = false }
wasm-encoder = { version = "0.244", default-features = false, features = ["wasmparser"] }
wasmparser = { version = "0.244", default-features = false }

[patch.crates-io]
# Detect unsupported platforms at run-time: https://github.com/RazrFalcon/memmap2-rs/pull/161.
memmap2 = { git = "https://github.com/RazrFalcon/memmap2-rs", rev = "01273a7c4ae1fbe2b119c35399ae2d34dddf488e" }
# Proc-macro bug: https://github.com/oli-obk/ui_test/issues/361.
ui_test = { git = "https://github.com/daxpedda/ui_test", branch = "js-bindgen" }

[workspace.lints.rust]
linker_messages = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
obfuscated_if_else = "allow"
tabs_in_doc_comments = "allow"
undocumented_unsafe_blocks = "warn"
use_self = "warn"
