[workspace]
members = [
	"cargo-js-sys",
	"js-bindgen",
	"js-sys-bindgen",
	"js-sys-macro",
	"ld",
	"ld-shared",
	"runner",
	"shared",
	"test-macro",
	"wasm-ld-opt",
]
resolver = "2"

[workspace.package]
edition = "2024"
include = [
	"/LICENSE-APACHE",
	"/LICENSE-MIT",
	"/Cargo.toml",
	"/src/**/*.rs",
	"!/src/**/tests/**",
	"/src/**/*.html",
	"/src/**/*.mjs",
]
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
annotate-snippets = { version = "0.12", default-features = false }
anstyle = { version = "1", default-features = false }
anyhow = "1"
argfile = { version = "1", features = ["response"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "json", "http1", "http2"] }
cargo_metadata = "0.23"
clap = { version = "4", features = ["derive"] }
clap-cargo = { version = "0.18", features = ["cargo_metadata"] }
fantoccini = { version = "0.22.0", default-features = false, features = ["rustls-tls"] }
foldhash = { version = "0.2", default-features = false }
futures-util = { version = "0.3", default-features = false }
hashbrown = { version = "0.16", default-features = false, features = ["inline-more"] }
indoc = "2"
itertools = { version = "0.14", default-features = false }
js-bindgen-ld-shared = { path = "ld-shared" }
js-bindgen-shared = { path = "shared" }
js-sys-bindgen = { path = "js-sys-bindgen" }
memmap2 = "0.9"
object = { version = "0.38", default-features = false, features = ["archive", "read_core", "std"] }
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
serde = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
serde_repr = "0.1"
shlex = { version = "1.3.0", default-features = false }
similar-asserts = { version = "1", default-features = false }
syn = { version = "2", default-features = false }
tempfile = "3"
tokio = "1"
ui_test = { version = "0.30", default-features = false, features = ["rustc"] }
url = { version = "2.5.8", default-features = false }
wasm-encoder = { version = "0.245", default-features = false, features = ["wasmparser"] }
wasmparser = { version = "0.245", default-features = false }
weedle2 = "5"

[patch.crates-io]
# Proc-macro bug: https://github.com/oli-obk/ui_test/issues/361.
ui_test = { git = "https://github.com/daxpedda/ui_test", branch = "js-bindgen" }

[workspace.lints.rust]
linker_messages = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
explicit_deref_methods = "allow"
pedantic = { level = "warn", priority = -1 }
struct_excessive_bools = "allow"
tabs_in_doc_comments = "allow"
undocumented_unsafe_blocks = "warn"
use_self = "warn"
wildcard_imports = "allow"
# TODO: remove
missing_errors_doc = "allow"
missing_panics_doc = "allow"
too_many_lines = "allow"
