[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "js-bindgen"
rust-version = { workspace = true }

[lib]
bench = false
doctest = false

[dependencies]
js-bindgen-macro = { workspace = true }

[dev-dependencies]
js-bindgen-test = { workspace = true }
paste = { workspace = true }

[lints]
workspace = true
