[package]
name = "js-bindgen"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
doctest = false

[dependencies]
js-bindgen-macro = { workspace = true }

[dev-dependencies]
js-bindgen-test = { workspace = true }
paste = { workspace = true }

[lints]
workspace = true
