[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "js-sys"
rust-version = { workspace = true }

[features]
macro = ["dep:js-sys-macro"]

[dependencies]
js-bindgen = { workspace = true }
js-sys-macro = { workspace = true, optional = true }

[dev-dependencies]
js-bindgen-test = { workspace = true }
web-sys = { workspace = true }

[lints]
workspace = true
