[package]
name = "js-sys"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
doctest = false
test = false

[dependencies]
js-bindgen = { workspace = true }
js-sys-macro = { workspace = true, optional = true }

[dev-dependencies]
js-bindgen-test = { workspace = true }
paste = { workspace = true }
web-sys = { workspace = true }
quickcheck = { workspace = true }
getrandom = { workspace = true }

[features]
macro = ["dep:js-sys-macro"]

[lints]
workspace = true
