[package]
name = "js-bindgen-test"
edition = { workspace = true }
rust-version = "1.87"
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
doctest = false
test = false

[dependencies]
js-bindgen-test-macro = { workspace = true }
js-sys = { workspace = true, features = ["macro"] }

[lints]
workspace = true
