[package]
name = "js-bindgen-test"
edition = { workspace = true }
rust-version = "1.87"
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
doctest = false
test = false

[target.'cfg(all(target_family = "wasm", any(target_os = "none", target_os = "unknown")))'.dependencies]
js-bindgen-test-macro = { workspace = true }
js-sys = { workspace = true, features = ["macro"] }

[target.'cfg(js_bindgen_cov)'.dependencies]
js-bindgen-cov = { workspace = true }

[lints]
workspace = true
