[package]
name = "wabii"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
include.workspace = true

[dependencies]
core = { version = "1.0.0", optional = true, package = "rustc-std-workspace-core" }

[dev-dependencies]
js-bindgen-test = { workspace = true }

[features]
rustc-dep-of-std = ["dep:core"]

[lints]
workspace = true
