[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "web-sys"
rust-version = { workspace = true }

[lib]
bench = false
test = false

[dependencies]
js-sys = { workspace = true }

[dev-dependencies]
js-bindgen-test = { workspace = true }

[lints]
workspace = true
