[package]
name = "web-sys"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
test = false

[dependencies]
js-sys = { workspace = true }

[dev-dependencies]
js-bindgen-test = { workspace = true }

[lints]
workspace = true
