[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "cargo-js-sys"
rust-version = "1.91"

[features]
default = ["js-sys"]
js-sys = ["dep:annotate-snippets", "js-sys-bindgen/file"]

[dependencies]
annotate-snippets = { workspace = true, optional = true }
anstyle = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
clap-cargo = { workspace = true }
js-bindgen-shared = { workspace = true }
js-sys-bindgen = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }

[lints]
workspace = true
