[package]
name = "cargo-js-sys"
version = "0.1.0"
edition = { workspace = true }
rust-version = "1.91"
license = { workspace = true }
include = { workspace = true }

[package.metadata.dev]
require-feature = true

[[bin]]
bench = false
name = "cargo-js-sys"
test = false

[dependencies]
annotate-snippets = { workspace = true, optional = true }
anstyle = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
clap-cargo = { workspace = true }
js-bindgen-shared = { workspace = true, features = ["memmap"] }
js-sys-bindgen = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["span-locations"] }
similar-asserts = { workspace = true }

[features]
default = ["js-sys"]
js-sys = ["dep:annotate-snippets", "js-sys-bindgen/file"]

[lints]
workspace = true
