[package]
name = "js-bindgen-cli-lib"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
doctest = false
test = false

[dependencies]
anyhow = { workspace = true }
foldhash = { workspace = true }
hashbrown = { workspace = true, features = ["default-hasher", "serde"] }
serde = { workspace = true, features = ["alloc", "derive"] }
wasmparser = { workspace = true }

[lints]
workspace = true
