[package]
edition = { workspace = true }
license = { workspace = true }
name = "js-bindgen-dev"
publish = false

[[bin]]
bench = false
name = "js-bindgen-dev"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
strum = { workspace = true }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { workspace = true, features = ["signal"] }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Threading"] }

[dev-dependencies]
cargo_metadata = { workspace = true, features = ["builder"] }

[lints]
workspace = true
