[package]
name = "js-bindgen-dev"
edition = { workspace = true }
license = { workspace = true }
publish = false

[[bin]]
bench = false
name = "js-bindgen-dev"

[dependencies]
anstyle = { workspace = true }
anyhow = { workspace = true }
cargo_metadata = { workspace = true }
clap = { workspace = true }
paste = { workspace = true }
strum = { workspace = true }

[dev-dependencies]
cargo_metadata = { workspace = true, features = ["builder"] }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { workspace = true, features = ["signal"] }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { workspace = true, features = ["Win32_System_Threading"] }

[lints]
workspace = true
