[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "inline-snap-macro"
publish = false
rust-version = { workspace = true }

[lib]
bench = false
doctest = false
proc-macro = true
test = false

[dependencies]
js-bindgen-shared = { workspace = true, features = ["memmap"] }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing", "printing", "proc-macro"] }
xxhash-rust = { workspace = true }

[lints]
workspace = true
