[package]
name = "inline-snap-macro"
edition = { workspace = true }
license = { workspace = true }
publish = false

[lib]
bench = false
doctest = false
proc-macro = true
test = false

[dependencies]
js-bindgen-shared = { workspace = true, features = ["memmap"] }
proc-macro2 = { workspace = true, features = ["span-locations"] }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "parsing", "printing", "proc-macro"] }
xxhash-rust = { workspace = true }

[lints]
workspace = true
