[package]
edition = { workspace = true }
license = { workspace = true }
name = "inline-snap"
publish = false

[lib]
bench = false
doctest = false
test = false

[dependencies]
dtor = { workspace = true }
hashbrown = { workspace = true, features = ["default-hasher"] }
inline-snap-macro = { workspace = true }
itertools = { workspace = true }
prettyplease = { workspace = true }
similar-asserts = { workspace = true }
syn = { workspace = true, features = ["full"] }
xxhash-rust = { workspace = true }

[lints]
workspace = true
