[package]
edition = { workspace = true }
name = "js-bindgen-runner"
rust-version = "1.87"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
js-bindgen-shared = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = { workspace = true }
wasmparser = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }

[lints]
workspace = true
