[package]
edition = { workspace = true }
name = "js-bindgen-runner"
rust-version = "1.87"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
fantoccini = { workspace = true }
js-bindgen-shared = { workspace = true }
parking_lot = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shlex = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
wasmparser = { workspace = true }

[lints]
workspace = true
