[package]
edition = { workspace = true }
name = "js-bindgen-test-runner"
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
wasmparser = { workspace = true }

[lints]
workspace = true
