[package]
edition = "2021"
name = "js-bindgen"
rust-version = "1.59"
version = "0.0.0"

[lib]
proc-macro = true

[dependencies]
js-bindgen-shared = { version = "0.0.0", path = "../shared" }

[dev-dependencies]
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
similar-asserts = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = ["parsing", "printing"] }
ui_test = { version = "0.30", default-features = false, features = ["rustc"] }

[[test]]
harness = false
name = "ui"

[lints]
workspace = true
