[package]
edition = { workspace = true }
name = "js-bindgen"
rust-version = { workspace = true }

[lib]
proc-macro = true

[dependencies]
js-bindgen-macro-shared = { workspace = true }

[dev-dependencies]
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
similar-asserts = { workspace = true }
syn = { workspace = true }
ui_test = { workspace = true }

[[test]]
harness = false
name = "ui"

[lints]
workspace = true
