[package]
edition = { workspace = true }
license = { workspace = true }
name = "js-sys-macro"
rust-version = "1.87"

[lib]
proc-macro = true

[dependencies]
js-sys-gen = { workspace = true, features = ["macro"] }
proc-macro2 = { workspace = true, features = ["proc-macro"] }

[lints]
workspace = true
