[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "js-sys-macro"
rust-version = "1.87"
version = "0.1.0"

[lib]
bench = false
doctest = false
proc-macro = true
test = false

[dependencies]
js-sys-bindgen = { workspace = true, features = ["macro"] }
proc-macro2 = { workspace = true, features = ["proc-macro"] }

[lints]
workspace = true
