[package]
name = "js-sys-macro"
version = "0.1.0"
edition = { workspace = true }
rust-version = "1.87"
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
doctest = false
proc-macro = true
test = false

[dependencies]
js-sys-bindgen = { workspace = true, features = ["macro"] }
proc-macro2 = { workspace = true, features = ["proc-macro"] }

[lints]
workspace = true
