[package]
edition = { workspace = true }
license = { workspace = true }
name = "js-bindgen-ld-lib"
rust-version = "1.87"

[dependencies]
anyhow = { workspace = true }
foldhash = { workspace = true }
hashbrown = { workspace = true }
itertools = { workspace = true }
js-bindgen-ld-shared = { workspace = true }
wasm-encoder = { workspace = true }
wasmparser = { workspace = true }

[lints]
workspace = true
