[package]
name = "js-bindgen-ld-shared"
version = "0.1.0"
edition = { workspace = true }
rust-version = "1.91"
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
doctest = false
test = false

[dependencies]
js-bindgen-shared = { workspace = true, features = ["memmap"] }
object = { workspace = true }
rwat = { workspace = true }
tempfile = { workspace = true }
wasmparser = { workspace = true }

[lints]
workspace = true
