[package]
edition = { workspace = true }
license = { workspace = true }
name = "js-bindgen-ld"
rust-version = "1.91"

[dependencies]
hashbrown = { workspace = true }
itertools = { workspace = true }
js-bindgen-ld-shared = { workspace = true }
js-bindgen-shared = { workspace = true }
wasm-encoder = { workspace = true }
wasmparser = { workspace = true }

[lints]
workspace = true
