[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "js-bindgen-ld"
rust-version = "1.91"

[dependencies]
argfile = { workspace = true }
hashbrown = { workspace = true }
js-bindgen-ld-lib = { workspace = true }
js-bindgen-ld-shared = { workspace = true }
js-bindgen-shared = { workspace = true }
wasm-encoder = { workspace = true }
wasmparser = { workspace = true }

[lints]
workspace = true
