[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "js-bindgen-ld"
rust-version = "1.91"

[dependencies]
anyhow = { workspace = true }
argfile = { workspace = true }
foldhash = { workspace = true }
hashbrown = { workspace = true, features = ["default-hasher"] }
itertools = { workspace = true }
js-bindgen-ld-shared = { workspace = true }
js-bindgen-shared = { workspace = true }
wasm-encoder = { workspace = true }
wasmparser = { workspace = true }

[lints]
workspace = true
