[package]
edition = "2024"
name = "js-bindgen-linker"
rust-version = "1.91"
version = "0.0.0"

[dependencies]
hashbrown = "0.16"
object = { version = "0.38", default-features = false, features = ["archive", "read_core", "std"] }
wasm-encoder = { version = "0.243", default-features = false, features = ["wasmparser"] }
wasmparser = { version = "0.243", default-features = false }
