[package]
edition = "2024"
name = "lld-opt"
publish = false
version = "0.0.0"

[dependencies]
anyhow = "1"
prettyplease = "0.2"
proc-macro2 = { version = "1", default-features = false }
quote = { version = "1", default-features = false }
serde_json = { version = "1", default-features = false, features = ["alloc"] }
syn = { version = "2", default-features = false, features = ["parsing", "printing"] }
