[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "js-bindgen-macro"
rust-version = { workspace = true }

[lib]
proc-macro = true

[dev-dependencies]
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true }
similar-asserts = { workspace = true }
syn = { workspace = true }
ui_test = { workspace = true }

[[test]]
harness = false
name = "ui"

[lints]
workspace = true
