[package]
name = "js-bindgen-macro"
version = "0.1.0"
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
include = { workspace = true }

[lib]
bench = false
doctest = false
proc-macro = true

[[test]]
harness = false
name = "ui"

[dev-dependencies]
inline-snap = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true }
similar-asserts = { workspace = true }
syn = { workspace = true }
ui_test = { workspace = true }

[lints]
workspace = true
