[package]
edition = { workspace = true }
include = { workspace = true }
license = { workspace = true }
name = "js-bindgen-shared"
rust-version = { workspace = true }
version = "0.1.0"

[lib]
bench = false
doctest = false
test = false

[features]
memmap = ["dep:memmap2"]
web-driver = [
	"dep:anyhow",
	"dep:futures-util",
	"dep:nix",
	"dep:strum",
	"dep:tokio",
	"dep:url",
	"dep:windows-sys",
]

[dependencies]
anyhow = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
strum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = [
	"io-util",
	"macros",
	"net",
	"process",
	"rt-multi-thread",
	"sync",
	"time",
] }
url = { workspace = true, optional = true }

[target.'cfg(target_family = "unix")'.dependencies]
nix = { workspace = true, optional = true, features = ["signal"] }

[target.'cfg(target_family = "windows")'.dependencies]
windows-sys = { workspace = true, optional = true, features = [
	"Win32_System_Console",
	"Win32_System_Threading",
] }

[lints]
workspace = true

[package.metadata.dev]
require-feature = true
